--- a/src/java/com/articulate/calendar/gui/NewEventDialog.form
+++ b/src/java/com/articulate/calendar/gui/NewEventDialog.form
@@ -259,6 +259,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="startTimeText_">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="12:00"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -278,6 +281,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="endTimeText_">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="12:00"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
